add: added basic content for flipping card and grids

--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -58,4 +58,10 @@
       border: 1px solid #ccc;
     }
   }
+  .CardContainer {
+    display: grid;
+    justify-content: center;
+    grid-template-columns: repeat(4, 240px);
+    gap: 18px;
+  }
 }
