add: added complete logic for the game

--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -58,6 +58,12 @@
       border: 1px solid #ccc;
     }
   }
+  .StartGameTitle {
+    color: #fff;
+    text-align: center;
+    font-weight: 500;
+    letter-spacing: 0.14rem;
+  }
   .CardContainer {
     display: grid;
     justify-content: center;
